
	* src/z80/gen.c:
	  Fix for returning long long, fixes #3512403.
	* device/lib/z180/stubs.s,
	  device/lib/z80/stubs.s,
	  device/lib/gbz80/stubs.s,
	  support/regression/tests/longlong.c:
	  More tests for long long.
	* support/regression/tests/gcc-torture-execute-*.c:
	  Made TODO comments more specific wrt. to what sdcc functionality is required for enabling the test.

2012-03-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c (initCSupport),
	  device/lib/_rrslonglong_rrx_s.c,
	  device/lib/_rrulonglong_rrx_s.c:
	  Fixed declarations for shift support functions.
	* device/lib/*z*/Makefile.in,
	  device/lib/Makefile.in,
	  device/lib/_r??longlong_rrx_s.c,
	   device/lib/_mullonglong.c:
	  Shift and multiplication support for long long.

2012-03-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  More flexible use of de for gbz80.

2012-03-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (initCSupport): fixed declarations for shift support functions
	* src/SDCCsymt.c (initBuiltIns),
	  src/SDCCast.c (funcOfTypeVarg),
	  src/SDCCast.h: added some const qualifiers 

2012-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  More flexible use of de for gbz80.

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Allow some use of de on gbz80.
	* src/z80/gen.c:
	  gbz80 >> fix.
	* device/lib/_rrslonglong_rrx_s.c,
	  device/lib/_rrulonglong_rrx_s.c:
	  Support functions for shifting long long.

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/ralloc.c,
	  src/z80/z80.h:
	  Remove support for using the old allocator for A, while using the new allocator for other registers.

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/z80.h:
	  Enabled exact cost function for gbz80.